added circle-ci setup

--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run features",
+    "test-ci": "npm run jshint-ci && npm run coverage-ci",
     "api": "node_modules/.bin/file-composer -i doc/api.md -o apiary.apib",
     "api-git": "git add apiary.apib",
     "jshint": "node_modules/.bin/jshint ./lib ./features",
-    "features": "node_modules/.bin/cucumber.js -f pretty --tags ~@ignore"
+    "jshint-ci": "node_modules/.bin/jshint ./lib ./features",
+    "features": "node_modules/.bin/cucumber.js -f pretty --tags ~@ignore",
+    "coverage": "node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- -f pretty --tags ~@ignore",
+    "coverage-ci": "node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- --tags ~@ignore --format json > $CIRCLE_TEST_REPORTS/tests.cucumber",
+    "coverage-check": "node_modules/.bin/istanbul check-coverage"
   },
   "repository": {
     "type": "git",
@@ -30,6 +35,7 @@
   "devDependencies": {
     "cucumber": "^0.5.1",
     "file-composer": "git://github.com/thegameofcode/file-composer#master",
+    "istanbul": "^0.3.15",
     "jshint": "^2.8.0",
     "pre-commit": "^1.0.10"
   },
