--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,6 @@ deployment:
   npm:
     branch: master
     commands:
-      - npm version 0.1.$CIRCLE_BUILD_NUM
+      - npm version 0.1.$CIRCLE_BUILD_NUM --no-git-tag-version
       - printf "_auth=$NPM_AUTH\nemail=$NPM_USERNAME\n" > npmrc
       - npm publish --userconfig npmrc
