--- a/circle.yml
+++ b/circle.yml
@@ -18,3 +18,4 @@ deployment:
       - npm version 0.1.$CIRCLE_BUILD_NUM --no-git-tag-version
       - printf "_auth=$NPM_AUTH\nemail=$NPM_USERNAME\n" > npmrc
       - npm publish --userconfig npmrc
+      - rm npmrc
