Changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tgoc-notifications",
+  "name": "resonator",
   "version": "0.1.0",
   "description": "notifications service",
   "main": "index.js",
