--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "lodash": "^3.9.3",
     "request": "^2.58.0",
-    "restify": "^3.0.3"
+    "restify": "^3.0.3",
+    "bunyan": "^1.3.5",
+    "config": "^1.13.0"
   },
   "devDependencies": {
     "chai": "^3.0.0",
