--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "request": "^2.58.0",
     "restify": "^3.0.3",
     "bunyan": "^1.3.5",
-    "config": "^1.13.0"
+    "config": "^1.13.0",
+    "mongoose": "4.0.1"
   },
   "devDependencies": {
     "chai": "^3.0.0",
