Updated package.json scripts

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "test-ci": "npm run jshint-ci && npm run coverage-ci",
     "api": "node_modules/.bin/file-composer -i doc/api.md -o apiary.apib",
     "api-git": "git add apiary.apib",
-    "jshint": "node_modules/.bin/jshint ./lib ./features",
-    "jshint-ci": "node_modules/.bin/jshint ./lib ./features",
-    "features": "node_modules/.bin/cucumber.js -f pretty --tags ~@ignore",
-    "coverage": "node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- -f pretty --tags ~@ignore",
-    "coverage-ci": "node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- --tags ~@ignore --format json > $CIRCLE_TEST_REPORTS/tests.cucumber",
+    "jshint": "node_modules/.bin/jshint ./lib ./cucumber/features",
+    "jshint-ci": "node_modules/.bin/jshint ./lib ./cucumber/features",
+    "features": "node_modules/.bin/cucumber.js ./cucumber/features -f pretty --tags ~@ignore",
+    "coverage": "node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ -f pretty --tags ~@ignore && npm run test-mocha",
+    "coverage-ci": "node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ --tags ~@ignore --format json > $CIRCLE_TEST_REPORTS/tests.cucumber",
     "coverage-check": "node_modules/.bin/istanbul check-coverage",
     "test-mocha": "./node_modules/.bin/mocha --reporter nyan",
     "fixtures": "node scripts/load_fixtures"
