Improved configuration. Added Identity Fixtures. Updated package.json scripts

--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "notifications service",
   "main": "index.js",
   "scripts": {
-    "test": "npm run fixtures && cucumber-js cucumber/features/ -r cucumber/features/support -r cucumber/features/",
+    "fixtures": "node scripts/load_fixtures",
+    "test-cucumber": "NODE_ENV=test npm run fixtures && NODE_ENV=test cucumber-js cucumber/features/ -r cucumber/features/support -r cucumber/features/",
+    "test-mocha": "NODE_ENV=test npm run fixtures && NODE_ENV=test ./node_modules/.bin/mocha --reporter nyan",
+    "test": "npm run test-cucumber && npm run test-mocha",
     "test-ci": "npm run jshint-ci && npm run coverage-ci",
     "api": "node_modules/.bin/file-composer -i doc/api.md -o apiary.apib",
     "api-git": "git add apiary.apib",
-    "jshint": "node_modules/.bin/jshint ./lib ./cucumber/features",
-    "jshint-ci": "node_modules/.bin/jshint ./lib ./cucumber/features",
-    "features": "node_modules/.bin/cucumber.js ./cucumber/features -f pretty --tags ~@ignore",
-    "coverage": "node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ -f pretty --tags ~@ignore && npm run test-mocha",
-    "coverage-ci": "node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ --tags ~@ignore --format json > $CIRCLE_TEST_REPORTS/tests.cucumber",
-    "coverage-check": "node_modules/.bin/istanbul check-coverage",
-    "test-mocha": "./node_modules/.bin/mocha --reporter nyan",
-    "fixtures": "node scripts/load_fixtures"
+    "jshint": "node_modules/.bin/jshint ./lib ./cucumber/features ./test/",
+    "jshint-ci": "node_modules/.bin/jshint ./lib ./cucumber/features ./test",
+    "coverage": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ -f pretty --tags ~@ignore && NODE_ENV=test npm run test-mocha",
+    "coverage-ci-cucumber": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ --tags ~@ignore --format json > $CIRCLE_TEST_REPORTS/tests.cucumber",
+    "coverage-ci-mocha": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --dir ./coverage-mocha -- -R spec > $CIRCLE_TEST_REPORTS/tests.mocha",
+    "coverage-ci": "npm run coverage-ci-cucumber && npm run coverage-ci-mocha",
+    "coverage-check": "node_modules/.bin/istanbul check-coverage"
   },
   "repository": {
     "type": "git",
