--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^3.9.3",
-    "request": "^2.58.0",
-    "restify": "^3.0.3",
+    "async": "^0.9.0",
     "bunyan": "^1.3.5",
     "config": "^1.13.0",
+    "lodash": "^3.9.3",
     "mongoose": "4.0.1",
-    "async": "^0.9.0"
+    "request": "^2.58.0",
+    "restify": "^3.0.3",
+    "twilio": "^2.2.1"
   },
   "devDependencies": {
     "chai": "^2.3.0",
