--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "main": "index.js",
   "scripts": {
     "fixtures": "node scripts/load_fixtures",
+    "test": "npm run test-cucumber && npm run test-mocha",
     "test-cucumber": "NODE_ENV=test npm run fixtures && NODE_ENV=test cucumber-js cucumber/features/ --tags ~@ignore -r cucumber/features/support -r cucumber/features/",
     "test-mocha": "NODE_ENV=test npm run fixtures && NODE_ENV=test ./node_modules/.bin/mocha --reporter nyan",
-    "test": "npm run test-cucumber && npm run test-mocha",
-    "test-ci": "npm run jshint-ci && npm run coverage-ci",
     "api": "node_modules/.bin/file-composer -i doc/api.md -o apiary.apib",
     "api-git": "git add apiary.apib",
     "jshint": "node_modules/.bin/jshint ./lib ./cucumber/features ./test/",
-    "jshint-ci": "node_modules/.bin/jshint ./lib ./cucumber/features ./test",
     "coverage": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ -f pretty --tags ~@ignore && NODE_ENV=test npm run test-mocha",
     "coverage-ci-cucumber": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ --tags ~@ignore --format json > $CIRCLE_TEST_REPORTS/tests.cucumber",
     "coverage-ci-mocha": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --dir ./coverage-mocha -- -R spec > $CIRCLE_TEST_REPORTS/tests.mocha",
     "coverage-ci": "npm run coverage-ci-cucumber && npm run coverage-ci-mocha",
-    "coverage-check": "node_modules/.bin/istanbul check-coverage"
+    "coverage-check": "node_modules/.bin/istanbul check-coverage",
+
+    "coverage-1": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js --lcovonly -- cucumber/features/ --tags ~@ignore --format json > /dev/null",
+    "coverage-2": "cp coverage/lcov.info coverage/cucumber.lcov",
+    "coverage-3": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --dir ./coverage-mocha -- -R spec > /dev/null",
+    "coverage-4": "cp coverage/lcov.info coverage/mocha.lcov",
+    "coverage-5": "node_modules/.bin/lcov-result-merger 'coverage/*.lcov' 'coverage/merged.lcov'",
+    "coverage-6": "cat ./coverage/merged.lcov | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
@@ -45,13 +50,17 @@
     "twilio": "^2.2.1"
   },
   "devDependencies": {
+    "blanket": "^1.1.7",
+    "coveralls": "^2.11.4",
     "cucumber": "^0.5.2",
     "cucumber-junit": "^1.2.0",
     "deep-diff": "^0.3.2",
     "file-composer": "^1.2.1",
     "istanbul": "^0.3.17",
     "jshint": "^2.8.0",
+    "lcov-result-merger": "^1.0.2",
     "mocha": "^2.2.5",
+    "mocha-lcov-reporter": "0.0.2",
     "nock": "^2.9.1",
     "pre-commit": "^1.0.10",
     "sinon": "^1.15.4",
@@ -60,12 +69,23 @@
   "pre-commit": [
     "api",
     "api-git",
-    "jshint",
-    "test"
+    "jshint"
   ],
   "jshintConfig": {
     "esnext": true,
     "node": true,
     "unused": true
+  },
+  "config": {
+    "blanket": {
+      "pattern": [
+        "src",
+        "tests"
+      ],
+      "data-cover-never": [
+        "node_modules",
+        "tests"
+      ]
+    }
   }
 }
