Fixed coverage step to merge Mocha and Cucumber coverage output correctly.

--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ test:
   pre:
     - npm run jshint
   override:
-    - npm test
+    - npm run test
     - npm run coverage-1
     - npm run coverage-2
     - npm run coverage-3
