--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "coverage-1": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js --lcovonly -- cucumber/features/ --tags ~@ignore --format json > /dev/null",
     "coverage-2": "cp coverage/lcov.info coverage/cucumber.lcov",
     "coverage-3": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --dir ./coverage-mocha -- -R spec > /dev/null",
-    "coverage-4": "cp coverage/lcov.info coverage/mocha.lcov",
+    "coverage-4": "cp coverage-mocha/lcov.info coverage/mocha.lcov",
     "coverage-5": "node_modules/.bin/lcov-result-merger 'coverage/*.lcov' 'coverage/merged.lcov'",
     "coverage-6": "cat ./coverage/merged.lcov | ./node_modules/coveralls/bin/coveralls.js"
   },
