Excluded scripts folder from Coverage.

--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "api": "node_modules/.bin/file-composer -i doc/api.md -o apiary.apib",
     "api-git": "git add apiary.apib",
     "jshint": "node_modules/.bin/jshint ./lib ./cucumber/features ./test/",
-    "coverage": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ -f pretty --tags ~@ignore && NODE_ENV=test npm run test-mocha",
+    "coverage": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover -x 'scripts/*' ./node_modules/.bin/cucumber.js -- cucumber/features/ -f pretty --tags ~@ignore && NODE_ENV=test npm run test-mocha",
     "coverage-ci-cucumber": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ --tags ~@ignore --format json > $CIRCLE_TEST_REPORTS/tests.cucumber",
     "coverage-ci-mocha": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --dir ./coverage-mocha -- -R spec > $CIRCLE_TEST_REPORTS/tests.mocha",
     "coverage-ci": "npm run coverage-ci-cucumber && npm run coverage-ci-mocha",
     "coverage-check": "node_modules/.bin/istanbul check-coverage",
-    "coverage-1": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js --lcovonly -- cucumber/features/ --tags ~@ignore --format json > /dev/null",
+    "coverage-1": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover -x 'scripts/*' ./node_modules/.bin/cucumber.js --lcovonly -- cucumber/features/ --tags ~@ignore --format json > /dev/null",
     "coverage-2": "cp coverage/lcov.info coverage/cucumber.lcov",
-    "coverage-3": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --dir ./coverage-mocha -- -R spec > /dev/null",
+    "coverage-3": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover -x 'scripts/*' ./node_modules/.bin/_mocha --dir ./coverage-mocha -- -R spec > /dev/null",
     "coverage-4": "cp coverage-mocha/lcov.info coverage/mocha.lcov",
     "coverage-5": "node_modules/.bin/lcov-result-merger 'coverage/*.lcov' 'coverage/merged.lcov'",
     "coverage-6": "cat ./coverage/merged.lcov | ./node_modules/coveralls/bin/coveralls.js"
