--- a/package.json
+++ b/package.json
@@ -41,14 +41,17 @@
   "dependencies": {
     "apn": "^1.7.4",
     "async": "^0.9.0",
+    "body-parser": "^1.13.3",
     "bson": "^0.4.11",
     "bunyan": "^1.3.5",
     "config": "^1.13.0",
+    "express": "^4.13.3",
     "lodash": "^3.9.3",
+    "method-override": "^2.3.5",
     "mongoose": "4.0.2",
     "node-gcm": "^0.11.0",
     "request": "^2.58.0",
-    "restify": "^3.0.3",
+    "restify-errors": "^2.6.1",
     "twilio": "^2.2.1"
   },
   "devDependencies": {
