--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "lcov-result-merger": "^1.0.2",
     "mocha": "^2.2.5",
     "mocha-lcov-reporter": "0.0.2",
+    "mock-express-request": "^0.1.1",
+    "mock-express-response": "^0.1.1",
     "nock": "^2.9.1",
     "pre-commit": "^1.0.10",
     "proxyquire": "^1.7.0",
