--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "express": "^4.13.3",
     "lodash": "^3.9.3",
     "method-override": "^2.3.5",
-    "mongoose": "4.0.2",
+    "mongoose": "^4.1.8",
     "node-gcm": "^0.11.0",
     "request": "^2.58.0",
     "restify-errors": "^2.6.1",
