--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./bin/server.js",
     "start-mock": "node ./bin/mocked-server.js",
-    "fixtures": "node scripts/load_fixtures",
+    "fixtures": "node ./scripts/load_fixtures",
     "test": "npm run test-cucumber && npm run test-mocha",
     "test-cucumber": "NODE_ENV=test npm run fixtures && NODE_ENV=test cucumber-js cucumber/features/ --tags ~@ignore -r cucumber/features/support -r cucumber/features/",
     "test-mocha": "NODE_ENV=test npm run fixtures && NODE_ENV=test ./node_modules/.bin/mocha --reporter nyan",
@@ -40,7 +40,7 @@
   "license": "ISC",
   "dependencies": {
     "apn": "^1.7.4",
-    "async": "^0.9.0",
+    "async": "^1.4.2",
     "body-parser": "^1.13.3",
     "bson": "^0.4.11",
     "bunyan": "^1.3.5",
