--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start-mock": "node ./bin/mocked-server.js",
     "fixtures": "node ./scripts/load_fixtures",
     "test": "npm run test-cucumber && npm run test-mocha",
+    "docker-test": "npm run docker-test-cucumber && npm run docker-test-mocha",
     "test-cucumber": "NODE_ENV=test npm run fixtures && NODE_ENV=test cucumber-js cucumber/features/ --tags ~@ignore -r cucumber/features/support -r cucumber/features/",
+    "docker-test-cucumber": "NODE_ENV=docker-test npm run fixtures && NODE_ENV=docker-test cucumber-js cucumber/features/ --tags ~@ignore -r cucumber/features/support -r cucumber/features/",
     "test-mocha": "NODE_ENV=test npm run fixtures && NODE_ENV=test ./node_modules/.bin/mocha --reporter nyan",
+    "docker-test-mocha": "NODE_ENV=docker-test npm run fixtures && NODE_ENV=docker-test ./node_modules/.bin/mocha --reporter nyan",
     "api": "node_modules/.bin/file-composer -i doc/api.md -o apiary.apib",
     "dredd": "npm run api && dredd --reporter nyan",
     "api-git": "git add apiary.apib",
