--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "api": "node_modules/.bin/file-composer -i doc/api.md -o apiary.apib",
     "dredd": "npm run api && dredd --reporter nyan",
     "api-git": "git add apiary.apib",
-    "jshint": "node_modules/.bin/jshint ./lib ./cucumber/features ./test/",
+    "lint": "eslint ./lib ./cucumber/features ./test/",
     "coverage": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ -f pretty --tags ~@ignore && NODE_ENV=test npm run test-mocha",
     "coverage-ci-cucumber": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber.js -- cucumber/features/ --tags ~@ignore --format json > $CIRCLE_TEST_REPORTS/tests.cucumber",
     "coverage-ci-mocha": "NODE_ENV=test npm run fixtures && NODE_ENV=test node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --dir ./coverage-mocha -- -R spec > $CIRCLE_TEST_REPORTS/tests.mocha",
@@ -55,12 +55,15 @@
     "twilio": "^2.2.1"
   },
   "devDependencies": {
+    "babel-eslint": "^4.1.3",
     "blanket": "^1.1.7",
     "chai": "^3.2.0",
     "coveralls": "^2.11.4",
     "cucumber": "^0.5.2",
     "cucumber-junit": "^1.2.0",
     "deep-diff": "^0.3.2",
+    "eslint": "^1.7.3",
+    "eslint-config-igz": "^0.1.0",
     "file-composer": "^1.2.1",
     "istanbul": "^0.3.17",
     "jshint": "^2.8.0",
@@ -78,12 +81,15 @@
   "pre-commit": [
     "api",
     "api-git",
-    "jshint"
+    "lint"
   ],
   "jshintConfig": {
     "esnext": true,
     "node": true,
     "unused": true
+  },
+  "engines": {
+    "node": ">=4.0.0"
   },
   "config": {
     "blanket": {
