--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ general:
     - coverage
 test:
   pre:
-    - npm run jshint
+    - npm run lint
   override:
     - npm run test
     - npm run coverage-1
