--- a/circle.yml
+++ b/circle.yml
@@ -32,7 +32,7 @@ deployment:
       - npm publish --userconfig npmrc
       - rm npmrc
   hub:
-    branch: dockerize_tests
+    branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker tag resonator:testing $DOCKERHUB_BASE/resonator:$VERSION
