--- a/circle.yml
+++ b/circle.yml
@@ -34,7 +34,7 @@ deployment:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker tag resonator:testing $DOCKERHUB_BASE/resonator:$VERSION
       - docker push $DOCKERHUB_BASE/resonator:$VERSION
-      - docker tag resonator:latest $DOCKERHUB_BASE/resonator:$VERSION
+      - docker tag resonator:testing $DOCKERHUB_BASE/resonator:latest
       - docker push $DOCKERHUB_BASE/resonator:latest
 notify:
   webhooks:
