--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express": "^4.13.3",
     "lodash": "^3.9.3",
     "method-override": "^2.3.5",
+    "mjml": "^1.3.4",
     "mongoose": "^4.1.8",
     "node-gcm": "^0.11.0",
     "request": "^2.58.0",
